--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/logo-napoelon.jpg" alt="Logo du Trail" class="logo">
+        <img src="logo-napoelon.jpg" alt="Logo du Trail" class="logo">
         <h1>Trail - Sur les Traces de Napoléon</h1>
         <h2>Soucirac - 14 juillet 2025</h2>
         <p>Plongez au cœur d’une aventure historique et sportive !.</p>
