--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
             <li><strong>Trail 12 km</strong> - Une course accessible alliant plaisir et performance.</li>
             <div class="image-container">
-                <img src="images/carte 12 km.jpg" alt="Carte du parcours 12 km">
+                <img src="images/carte_12km.jpg" alt="Carte du parcours 12 km">
                 <img src="images/profil 12 km.jpg" alt="Dénivelé du parcours 12 km">
             </div>
             
