--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p>Un cadre naturel exceptionnel, une ambiance conviviale et un défi à relever ! Venez profiter du repas traditionnel et champètre apres la course.</p>
         
         <h2>Inscription</h2>
-        <p><a href="https://www.inscription-trail.com" target="_blank" style="font-size: 18px; color: #e74c3c; font-weight: bold;">Cliquez ici pour vous inscrire</a></p>
+        <p><a href="https://chrono-start.com/inscriptions-listing/" target="_blank" style="font-size: 18px; color: #e74c3c; font-weight: bold;">Cliquez ici pour vous inscrire</a></p>
         
         <h2>Pour nous trouver</h2>
         <html lang="fr">
